--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,14 @@
-:root body {
+:root {
+  font-family: 'Pixelify Sans', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
   margin: 0;
+  height: 100vh;
 }
 
 canvas {
@@ -11,4 +20,24 @@ canvas {
   top: 15px;
   left: 15px;
   z-index: 1;
+}
+
+.dialogue {
+  position: absolute;
+  display: none;
+  background-color: #08080899;
+  color: white;
+  font-size: 2em;
+  width: 60%;
+  height: 30%;
+  transform: translate(-50%, 0);
+  padding: 15px;
+  left: 50%;
+  bottom: 15px;
+  z-index: 1;
+}
+
+.dialogue .name {
+  position: absolute;
+  transform: translate(0, -100%);
 }
