--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,7 @@ canvas {
 
 dialog {
   padding: 0;
-  top: 50%;
-  transform: translate(0, -50%);
+  /* transform: translate(0, -50%); */
   font-size: 2rem;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
